# dogfun

./: Cargo.toml  README.md
shaders/: Cargo.toml  build.rs
shaders/src/: ThresholdPixelShader.hlsl  ThresholdShader.hlsl  lib.rs
src/: d2d.rs  d3d11.rs  imaging.rs  main.rs  threshold.rs
src/effects/: custom.rs  mod.rs  threshold.rs
