[package]
name = "dogfun"
version = "0.1.0"
edition = "2021"

[dependencies]
shaders = { path = "shaders" }
# For implement
windows-core = "0.58.0"

[dependencies.windows]
version = "0.58.0"
features = [
    "implement",
    "Foundation",
    "Foundation_Metadata",
    "Foundation_Numerics",
    "Graphics",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Graphics_Imaging",
    "Storage",
    "Storage_Streams",
    "System",
    "UI_Composition",
    "UI_Composition_Desktop",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Composition",
    "Win32_UI_WindowsAndMessaging",
]
